[gd_scene load_steps=2 format=3 uid="uid://bprofile9x5m"]

[ext_resource type="Script" path="res://scripts/ui/profile_select.gd" id="1_profile_select"]

[node name="ProfileSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_profile_select")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT PROFILE"
horizontal_alignment = 1

[node name="SpacerTop" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Slot1Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SlotButton" type="Button" parent="VBoxContainer/Slot1Container"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Slot1Container/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Slot 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="VBoxContainer/Slot1Container"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
text = "DEL"

[node name="Slot2Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SlotButton" type="Button" parent="VBoxContainer/Slot2Container"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Slot2Container/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Slot 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="VBoxContainer/Slot2Container"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
text = "DEL"

[node name="Slot3Container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SlotButton" type="Button" parent="VBoxContainer/Slot3Container"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Slot3Container/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Slot 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteButton" type="Button" parent="VBoxContainer/Slot3Container"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 2
text = "DEL"

[node name="SpacerBottom" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"
